# Babel_Voip_Communication

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh  conanfile.txt  install.sh  test.sh
includes/: Babel.hpp
includes/client/: AOpus.hpp  APortAudio.hpp  ClientNetwork.h  ClientUi.h  DataClient.h  IAudio.hpp  ICrypt.hpp  IData.h  INetwork.h  ISocket.h  SocketTCP.h  SocketUDP.h  test.h  test.ui  widge.h  widge.ui
includes/client/Exception/: CantUsePA.hpp  ErrorAOpus.hpp  ErrorPortAudio.hpp
includes/common/: AException.hpp  IException.hpp  INetwork.hpp  TransfertData.hpp
includes/server/: AsioNetwork.hpp  Client.hpp  DataBase.hpp  HandleBoostNetwork.hpp  HandleCommande.hpp  HandleSqlite.hpp  IDataBase.hpp  Package.hpp  QueuePacket.hpp  Server.hpp  TableElement.hpp
includes/server/Exception/: ErrorSql.hpp  FataleErrorSql.hpp  HandleCtrlC.hpp  QuitServer.hpp
src/client/: AOpus.cpp  APortAudio.cpp  ClientNetwork.cpp  ClientUi.cpp  DataClient.cpp  HandlerAudio.cpp  Main.cpp  SocketTCP.cpp  SocketUDP.cpp
src/client/Exception/: CantUsePA.cpp  ErrorAOpus.cpp  ErrorPortAudio.cpp
src/common/: AException.cpp  TransfertData.cpp
src/server/: Client.cpp  DataBase.cpp  HandleBoostNetwork.cpp  HandleCommande.cpp  HandleSqlite.cpp  Main.cpp  Package.cpp  QueuePacket.cpp  Server.cpp  TableElement.cpp
src/server/Exception/: ErrorSql.cpp  FataleErrorSql.cpp  HandleCtrlC.cpp  QuitServer.cpp
